# manifold

./: .gitignore  Cargo.toml  README.md  build.sh  build_incremental.sh  build_release.sh  bump_rust_version.py  make_release.sh  pyproject.toml  run.sh  test.py
benches/: bench.txt
benches/witness/: main.rs
manifold/: __init__.py
src/: lib.rs  manifold_rs.pyi
src/math/: bitscan.rs  chineese_remainder_theorem.rs  collatz.rs  common.rs  fib_calc.rs  inneficient.rs  int_ring.rs  macros.rs  miller_rabin_bases.rs  mod.rs  num_utils.rs  padic.rs  primes.rs  some_math.rs  static_data.rs  threading.rs  traits.rs  witness_accuracy.rs
tests/: test_basic.py
