[package]
name = "manifold_rs"
version = "0.1.51"
edition = "2021"

[lib]
name = "manifold_rs"
crate-type = [ "cdylib",]

[dependencies]
indexmap = "2.7.1"
lazy_static = "1.5.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
rug = "1.26.1"

[dependencies.pyo3]
version = "0.20.0"
features = [ "extension-module",]
