[[bin]]
name = "manifold_rs-bin"
path = "src/bin/main.rs"

[package]
name = "manifold_rs"
version = "0.1.60"
edition = "2021"

[lib]
name = "manifold_rs"
crate-type = [ "cdylib", "rlib",]
path = "src/lib.rs"

[dependencies]
indexmap = "2.7.1"
lazy_static = "1.5.0"
num_cpus = "1.16.0"
once_cell = "1.20.3"
rayon = "1.10.0"
rug = "1.26.1"
serde_json = "1.0.140"

[dependencies.pyo3]
version = "0.20.0"
features = [ "extension-module",]

[package.metadata.maturin]
include = [ "src/manifold_rs.pyi", "py.typed",]
