[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "manifold"
version = "0.1.37"
description = "A Python library with Rust implementation"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = "==3.12.*"
dependencies = [
    "maturin>=1.8.2",
    "sympy>=1.13.3",
]

[tool.maturin]
python-source = "manifold"
features = ["pyo3/extension-module"]
module-name = "manifold_rs"

[dependency-groups]
dev = ["ipython>=8.12.3"]
